--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
-        <foo.version>0.0.1-SNAPSHOT</foo.version>
+        <foo.version>0.0.1</foo.version>
     </properties>
 
     <dependencies>
