--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -2,6 +2,6 @@ github:
   organisations:
   - name: igdianov
     repositories:
-    - name: baz
+    - name: foobar
       useSinglePullRequest: true
       
