--- a/pom.xml
+++ b/pom.xml
@@ -17,4 +17,13 @@
             <version>${foo.version}</version>
         </dependency>
     </dependencies>
-</project>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version></plugin>
+    </plugins>
+    </build>
+  </project>
